==============
lxml changelog
==============

Under development
=================

Features added
--------------

* lxml.etree now tries to find the absolute path name of files when
  parsing from a file-like object.  This helps custom resolvers when
  resolving relative URLs, as lixbml2 can prepend them with the path
  of the source document.

Bugs fixed
----------

Other changes
-------------


2.1.1 (2008-07-24)
==================

Features added
--------------

Bugs fixed
----------

* Crash when parsing XSLT stylesheets in a thread and using them in
  another.

* Encoding problem when including text with ElementInclude under
  Python 3.

Other changes
-------------


2.1 (2008-07-09)
================

Features added
--------------

* Smart strings can be switched off in XPath (``smart_strings``
  keyword option).

* ``lxml.html.rewrite_links()`` strips links to work around documents
  with whitespace in URL attributes.

Bugs fixed
----------

* Custom resolvers were not used for XMLSchema includes/imports and
  XInclude processing.

* CSS selector parser dropped remaining expression after a function
  with parameters.

Other changes
-------------

* ``objectify.enableRecursiveStr()`` was removed, use
  ``objectify.enable_recursive_str()`` instead

* Speed-up when running XSLTs on documents from other threads


2.0.7 (2008-06-20)
==================

Features added
--------------

* Pickling ``ElementTree`` objects in lxml.objectify.

Bugs fixed
----------

* Descending dot-separated classes in CSS selectors were not resolved
  correctly.

* ``ElementTree.parse()`` didn't handle target parser result.

* Potential threading problem in XInclude.

* Crash in Element class lookup classes when the __init__() method of
  the super class is not called from Python subclasses.

Other changes
-------------

* Non-ASCII characters in attribute values are no longer escaped on
  serialisation.


2.1beta3 (2008-06-19)
=====================

Features added
--------------
