@@ -16,6 +16,9 @@ Features added
 Bugs fixed
 ----------
 
+* Target parser did not honour the ``recover`` option and raised an
+  exception instead of calling ``.close()`` on the target.
+
 Other changes
 -------------
 
